--- a/Ciallo/Ciallo.vcxproj
+++ b/Ciallo/Ciallo.vcxproj
@@ -88,9 +88,11 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="ArticulatedLineEngine.cpp" />
-    <ClCompile Include="Brush.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CanvasPanel.cpp" />
     <ClCompile Include="Ciallo.cpp" />
+    <ClCompile Include="Drawing.cpp" />
+    <ClCompile Include="Global.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -104,9 +106,11 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="ArticulatedLineEngine.h" />
-    <ClInclude Include="Brush.h" />
-    <ClInclude Include="CanvasPanel.hpp" />
-    <ClInclude Include="GeometryPrimitives.hpp" />
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="CanvasPanel.h" />
+    <ClInclude Include="Drawing.h" />
+    <ClInclude Include="GeometryPrimitives.h" />
+    <ClInclude Include="Global.h" />
     <ClInclude Include="pch.hpp" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Polyline.h" />
