--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1231,0
-Size=1329,1334
+Pos=1181,0
+Size=1379,1334
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=225,435
+Pos=183,412
 Size=500,409
 Collapsed=0
 
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Window][ImPlot Demo]
 Pos=0,0
-Size=1229,1334
+Size=1179,1334
 Collapsed=0
 DockId=0x00000001,0
 
@@ -29,8 +29,13 @@ Pos=0,0
 Size=2560,1334
 Collapsed=0
 
+[Window][Canvas Panel]
+Pos=279,109
+Size=1528,1102
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=1229,1334 CentralNode=1 Selected=0xB903C8C9
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1329,1334 Selected=0xE87781F4
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X Selected=0xB903C8C9
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=1179,1334 CentralNode=1 Selected=0xB903C8C9
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1379,1334 Selected=0xE87781F4
 
