--- a/Ciallo/Ciallo.vcxproj
+++ b/Ciallo/Ciallo.vcxproj
@@ -92,13 +92,14 @@
     <ClCompile Include="CanvasPanel.cpp" />
     <ClCompile Include="Ciallo.cpp" />
     <ClCompile Include="Drawing.cpp" />
-    <ClCompile Include="Global.cpp" />
+    <ClCompile Include="EntityObject.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Polyline.cpp" />
+    <ClCompile Include="Project.cpp" />
     <ClCompile Include="ShaderUtilities.cpp" />
     <ClCompile Include="Stroke.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -109,11 +110,12 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CanvasPanel.h" />
     <ClInclude Include="Drawing.h" />
+    <ClInclude Include="EntityObject.h" />
     <ClInclude Include="GeometryPrimitives.h" />
-    <ClInclude Include="Global.h" />
     <ClInclude Include="pch.hpp" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Polyline.h" />
+    <ClInclude Include="Project.h" />
     <ClInclude Include="ShaderUtilities.h" />
     <ClInclude Include="Stroke.h" />
     <ClInclude Include="Window.h" />
