--- a/Ciallo/Ciallo.vcxproj
+++ b/Ciallo/Ciallo.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="Ciallo.cpp" />
     <ClCompile Include="Drawing.cpp" />
     <ClCompile Include="EntityObject.cpp" />
+    <ClCompile Include="PaintTool.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -102,6 +103,7 @@
     <ClCompile Include="Project.cpp" />
     <ClCompile Include="ShaderUtilities.cpp" />
     <ClCompile Include="Stroke.cpp" />
+    <ClCompile Include="ToolBox.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -112,12 +114,14 @@
     <ClInclude Include="Drawing.h" />
     <ClInclude Include="EntityObject.h" />
     <ClInclude Include="GeometryPrimitives.h" />
+    <ClInclude Include="PaintTool.h" />
     <ClInclude Include="pch.hpp" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Polyline.h" />
     <ClInclude Include="Project.h" />
     <ClInclude Include="ShaderUtilities.h" />
     <ClInclude Include="Stroke.h" />
+    <ClInclude Include="ToolBox.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
