--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1181,0
-Size=1379,1334
+Pos=981,0
+Size=1379,1200
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=183,412
@@ -20,22 +19,24 @@ Collapsed=0
 
 [Window][ImPlot Demo]
 Pos=0,0
-Size=1179,1334
+Size=1179,1200
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=2560,1334
+Size=1000,1000
 Collapsed=0
 
 [Window][Canvas Panel]
-Pos=204,25
-Size=2131,1348
+Pos=7,17
+Size=1518,1200
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=806,234
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X Selected=0xB903C8C9
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=1179,1334 CentralNode=1 Selected=0xB903C8C9
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1379,1334 Selected=0xE87781F4
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1000,1000 CentralNode=1
 
