--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=981,0
-Size=1379,1200
+Pos=1214,0
+Size=1346,1334
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=183,412
@@ -19,24 +20,37 @@ Collapsed=0
 
 [Window][ImPlot Demo]
 Pos=0,0
-Size=1179,1200
+Size=1212,1334
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1000,1000
+Size=2560,1334
 Collapsed=0
 
 [Window][Canvas Panel]
-Pos=7,17
-Size=1518,1200
+Pos=872,165
+Size=1449,1197
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Dear ImGui Debug Log]
 Pos=60,60
 Size=806,234
 Collapsed=0
 
+[Window][Toolbox]
+Pos=779,165
+Size=91,1197
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1000,1000 CentralNode=1
+DockNode    ID=0x00000001 Pos=779,165 Size=1542,1197 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=90,1200 Selected=0x0339283F
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1426,1200 Selected=0xCF16F3E9
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1334 Split=X
+  DockNode  ID=0x00000004 Parent=0x8B93E3BD SizeRef=32,1334 CentralNode=1 Selected=0xB903C8C9
+  DockNode  ID=0x00000005 Parent=0x8B93E3BD SizeRef=1346,1334 Selected=0xE87781F4
 
