Vector bucket fill  done naiively
Finally!

--- a/Ciallo/Ciallo.vcxproj.filters
+++ b/Ciallo/Ciallo.vcxproj.filters
@@ -69,10 +69,10 @@
     <ClCompile Include="PolygonEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="FillTool.cpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="ArrangementManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FillTool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
