--- a/Ciallo/Ciallo.vcxproj.filters
+++ b/Ciallo/Ciallo.vcxproj.filters
@@ -181,7 +181,11 @@
     <CopyFileToFolders Include="shaders\polygon.frag">
       <Filter>Resource Files\shaders</Filter>
     </CopyFileToFolders>
-    <CopyFileToFolders Include="shaders\polygon.vert" />
-    <CopyFileToFolders Include="shaders\prefixSumPosition.comp" />
+    <CopyFileToFolders Include="shaders\polygon.vert">
+      <Filter>Resource Files\shaders</Filter>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="shaders\prefixSumPosition.comp">
+      <Filter>Resource Files\shaders</Filter>
+    </CopyFileToFolders>
   </ItemGroup>
 </Project>
